force-app/main/default/objects/Placement__c/fields/Bench_ID__c.field-meta.xml
<CustomField>
    <fullName>Bench_ID__c</fullName>
    <label>Bench ID</label>
    <type>TextArea</type>
</CustomField>