force-app/main/default/objects/Placement__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>TextArea</type>
</CustomField>