force-app/main/default/objects/Placement__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <type>TextArea</type>
</CustomField>