force-app/main/default/objects/Placement__c/fields/Client_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Client_Bill_Rate__c</fullName>
    <label>Client Bill Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>