force-app/main/default/objects/Placement__c/fields/Future_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Future_Revenue__c</fullName>
    <formula>IF( TODAY()  &gt;  Start_Date__c , Total_Revenue__c  - (  End_Date__c  - TODAY() ) * 8, IF(TODAY()  &lt;  Start_Date__c, 0, IF(TODAY()  &gt; End_Date__c, 0, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>