force-app/main/default/objects/Placement__c/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <label>Job Code</label>
    <type>TextArea</type>
</CustomField>