force-app/main/default/objects/Placement__c/fields/Placement_status__c.field-meta.xml
<CustomField>
    <fullName>Placement_status__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <label>Placement status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>