force-app/main/default/objects/Placement__c/fields/Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Placement_Type__c</fullName>
    <label>Placement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recurring Revenue</fullName>
                <default>true</default>
                <label>Recurring Revenue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>