force-app/main/default/objects/Placement__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <formula>IF(
  AND(NOT(ISBLANK( End_Date__c )), NOT(ISBLANK( Start_Date__c ))),
  End_Date__c  -  Start_Date__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>