force-app/main/default/objects/Placement__c/fields/Submitted_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted On Date</label>
    <type>DateTime</type>
</CustomField>