force-app/main/default/objects/Placement__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Vendor Name</label>
    <type>TextArea</type>
</CustomField>