force-app/main/default/objects/Placement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bench_ID__c</columns>
    <columns>Candidate_Name__c</columns>
    <columns>Job_Code__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Client_Bill_Rate__c</columns>
    <columns>Pay_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>